Shell Items are also now Tabs. Introduced a page for the Map (Icons too).

--- a/ThinkGeoMapRepo/ThinkGeoMapRepo.iOS/ThinkGeoMapRepo.iOS.csproj
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo.iOS/ThinkGeoMapRepo.iOS.csproj
@@ -142,4 +142,13 @@
       <Name>ThinkGeoMapRepo</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\MapIconSmall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\MapIconSmall%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\MapIconSmall%403x.png" />
+  </ItemGroup>
 </Project>
