--- a/ThinkGeoMapRepo/ThinkGeoMapRepo.Android/ThinkGeoMapRepo.Android.csproj
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo.Android/ThinkGeoMapRepo.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ThinkGeo.UI.XamarinForms.Android">
+      <Version>12.3.10</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
@@ -63,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\com.companyname.thinkgeomaprepo.mapsuitelicense" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
