--- a/ThinkGeoMapRepo/ThinkGeoMapRepo.iOS/ThinkGeoMapRepo.iOS.csproj
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo.iOS/ThinkGeoMapRepo.iOS.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <BundleResource Include="com.companyname.ThinkGeoMapRepo.mapsuitelicense" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -132,6 +133,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ThinkGeo.UI.XamarinForms.iOS">
+      <Version>12.3.10</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
