Started MapBox and Naxam feature.

--- a/ThinkGeoMapRepo/ThinkGeoMapRepo.Android/ThinkGeoMapRepo.Android.csproj
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo.Android/ThinkGeoMapRepo.Android.csproj
@@ -54,8 +54,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Naxam.Mapbox.Forms">
+      <Version>1.0.8.4</Version>
+    </PackageReference>
     <PackageReference Include="ThinkGeo.UI.XamarinForms.Android">
       <Version>12.3.10</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.Annotations">
+      <Version>28.0.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
