--- a/ThinkGeoMapRepo/ThinkGeoMapRepo/ThinkGeoMapRepo.csproj
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo/ThinkGeoMapRepo.csproj
@@ -7,12 +7,16 @@
 
   <ItemGroup>
     <PackageReference Include="GeoJSON.Net" Version="1.2.19" />
+    <PackageReference Include="Naxam.Mapbox.Forms" Version="1.0.8.4" />
     <PackageReference Include="ThinkGeo.UI.XamarinForms" Version="12.3.10" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\MapBoxPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MapPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
