Implemented basic Editing mode for map.

--- a/ThinkGeoMapRepo/ThinkGeoMapRepo.iOS/ThinkGeoMapRepo.iOS.csproj
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo.iOS/ThinkGeoMapRepo.iOS.csproj
@@ -155,4 +155,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\MapIconSmall%403x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\chevron_down.png" />
+  </ItemGroup>
 </Project>
