--- a/ThinkGeoMapRepo/ThinkGeoMapRepo.Android/ThinkGeoMapRepo.Android.csproj
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo.Android/ThinkGeoMapRepo.Android.csproj
@@ -59,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ThinkGeo.UI.XamarinForms.Android">
-      <Version>13.0.0-beta156</Version>
+      <Version>12.3.11</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
